# 2022-abstractgl-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
ext/imgui/: CMakeLists.txt
src/: CMakeLists.txt  error_callback.hpp  file.hpp  lsystem.hpp  main.cpp  pi.hpp  root.hpp  shader.glsl
src/agl/: all.hpp
src/agl/glsl/mat/: mat.hpp
src/agl/glsl/vec/: vec.hpp
src/agl/raw/: all.hpp
src/agl/raw/function/: all.hpp
src/agl/raw/qualifier/: all.hpp  attribute_index.hpp  binding_index.hpp  buffer.hpp  buffer_target.hpp  count.hpp  cstring.hpp  draw_mode.hpp  draw_type.hpp  framebuffer.hpp  framebuffer_buffer.hpp  instance_count.hpp  offset.hpp  program.hpp  qualifier.hpp  shader.hpp  shader_type.hpp  size.hpp  stride.hpp  type.hpp  uniform_index.hpp  vertex_array.hpp
src/app/hello_triangle/: hello_triangle.hpp  main.cpp
src/chaine/: all.hpp  main.cpp  mesh.hpp
src/chaine/face_vertex_mesh/: Face.hpp  Mesh.hpp  Vertex.hpp  agl.hpp  all.hpp  engine.hpp  face_vertex_mesh.hpp
src/chaine/shader/: solid.vs
src/chaine/triangle_mesh/: all.hpp  triangle_mesh.hpp  triangle_topology.hpp
src/common/: all.hpp
src/common/dependency/: abstractgl_api_opengl.hpp  glm.hpp
src/common/filesystem/: all.hpp  recursive_path.hpp
src/common/gizmo/: all.hpp
src/common/gizmo/solid_box/: all.hpp  solid_box.hpp
src/common/gizmo/solid_uv_sphere/: solid_uv_sphere.hpp
src/common/gizmo/wire_axes/: all.hpp  wire_axes.hpp
src/common/glsl/: all.hpp
src/common/glsl/depth_renderer/: shader.frag  shader.vert
src/common/glsl/shader/: test.vert
src/common/glsl/solid_renderer/: shader.frag  shader.vert  solid_renderer.hpp
src/common/glsl/wireframe_renderer/: shader.frag  wireframe_renderer.hpp
src/common/opengl/: debug_message_callback.hpp
src/common/std/: all.hpp
src/common/std/file/: string.hpp
src/common/std/map/: all.hpp  (+1 more)
src/common/time/: all.hpp  scheduler.hpp
src/common/views/: all.hpp  indirect.hpp
src/engine/: accessor.hpp  all.hpp  animation.hpp  attribute_buffer.hpp  buffer.hpp  buffer_view.hpp  camera.hpp  capability.hpp  database.hpp  framebuffer.hpp  geometry.hpp  instance.hpp  material.hpp  mesh.hpp  node.hpp  object.hpp  omni_shadow_map.hpp  primitive.hpp  program.hpp  render.hpp  render_pass.hpp  scene.hpp  shader.hpp  skin.hpp  texture.hpp  transform.hpp  uniform.hpp
src/engine/data/: all.hpp
src/engine/scene/: all.hpp  orthographic_projection.hpp  perspective_projection.hpp  view.hpp
src/format/gltf2/: all.hpp
src/format/off/: all.hpp
src/gl/: all.hpp  draw.hpp  mix.hpp  stride.hpp  uniform.hpp
src/gl/attribute_location/: all.hpp  attribute_location.hpp
src/gl/buffer/: all.hpp  bind.hpp  buffer.hpp  map.hpp  storage.hpp  stride.hpp
src/gl/enum/: shader_type.hpp
src/gl/exception/: all.hpp  callback.hpp  compilation_failure.hpp  incomplete_frame_buffer.hpp  invariant_violation.hpp  linkage_failure.hpp
src/gl/frame_buffer/: all.hpp  frame_buffer.hpp  throw_if_incomplete.hpp
src/gl/matrix/: all.hpp  inverse.hpp  lookat.hpp  matrix.hpp  multiplication.hpp  rotation_x.hpp  scaling.hpp  translation.hpp  transpose.hpp
src/gl/object/: all.hpp  object.hpp  object_traits.hpp  traits.hpp
src/gl/program/: all.hpp  attach.hpp  info_log.hpp  info_log_length.hpp  link.hpp  link_status.hpp  program.hpp  uniform_location.hpp  use.hpp
src/gl/qualifier/: all.hpp  offset.hpp  stride.hpp
src/gl/raw/: all.hpp
src/gl/shader/: all.hpp  compile.hpp  compile_status.hpp  fragment.hpp  geometry.hpp  info_log.hpp  info_log_length.hpp  shader.hpp  source.hpp  vertex.hpp
src/gl/texture/: active_texture.hpp  all.hpp  bind.hpp  texture.hpp
src/gl/uniform/: all.hpp  location.hpp  uniform.hpp
src/gl/vector/: all.hpp  vec4.hpp
src/gl/vertex_array/: all.hpp  bind.hpp  binding.hpp  enable.hpp  vertex_array.hpp
src/gl/vertex_buffer_binding/: vertex_buffer_binding.hpp
src/hello_triangle/: hello_triangle.hpp
src/littlest_tokyo/: littlest_tokyo.hpp  main.cpp
src/littlest_tokyo/mesh/: id.hpp  mesh.hpp  vertex_array.hpp
src/littlest_tokyo/scene_graph/: scene_graph.hpp
src/local/: paths.hpp
src/matrix/: all.hpp  matrix.hpp  multiplication.hpp  rotation_y.hpp  scaling.hpp
src/mesh/: all.hpp  face_vertex.hpp  subdivision.hpp  vertex.hpp
src/program/: program.hpp  window.hpp
src/sandbox/: audi.cpp  dear_imgui.cpp  gltf copy.cpp  gltf.cpp  lookat.cpp  lsystem.cpp  rock.cpp  shader_compiler.cpp  terrain.cpp  test.cpp  tree.cpp  tree_traversal.cpp
src/scene/: all.hpp  camera.hpp  grass.hpp  main copy.cpp  main.cpp  node.hpp  perspective_projection.hpp  renderer.hpp  scene.hpp  skybox.hpp  view.hpp
src/scene/exception/: all.hpp  exception.hpp  invariant_violation.hpp
src/shader/: compile.hpp  compile_status.hpp  flat_shading.vs  info_log_length.hpp  pass_through.fs  pass_through.vs  phong.fs  phong.vs  phong2.vs  shader.hpp  skybox.fs  skybox.vs  texture.fs  texture.vs
src/shader/brdf/: ambient_lambert.glsl  diffuse_lambertian.glsl  distribution_ggx.glsl  fresnel_schlick.glsl  geometric_schlick.glsl  ndf_ggx.glsl
src/shader/debug/: normal_lines.fs  normal_lines.gs  normal_lines.vs
src/shader/forward/: ambient.fs  ambient.vs
src/shader/gltf/: brdf.fs  cube_face_depth.fs  cube_face_depth.vs  depth.fs  depth.vs  monochrome.fs  normal_mapping.fs  normal_mapping.vs  perspective_shadow_map.vs  phong.vs  phong_normal_mapping.fs  shadow_map.vs  skybox.fs  skybox.vs  tone_mapping.fs
src/shader/rock/: bake_texture.fs  bake_texture.vs  phong_monochrome.fs  phong_monochrome.vs  point.fs
src/shader/terrain/: generator.fs  generator.vs  grass.fs  grass.vs  renderer.fs  renderer.gs  renderer.vs
src/shader/tree/: leaf.fs  leaf.vs  line.fs  line.vs  phong.fs  phong.vs
src/shadertoy/: main.cpp
src/shadertoy/shader/: blob.glsl
src/turtle/: all.hpp  joint.hpp  tree.hpp  turtle.hpp
src/vector/: addition.hpp  all.hpp  cross.hpp  ostream.hpp  unary_minus_operator.hpp  vector.hpp  xyzw.hpp
src/vector/operation/: all.hpp  cross.hpp  length.hpp
src/vector/operator/: addition.hpp  addition_assignment.hpp  all.hpp
(+134 files in other folders)
